observability-tools/prometheus/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system

  hostnames:
  - grafana.local

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: observability-grafana
      port: 80
