observability-tools/prometheus/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-gateway
      sectionName: https
  hostnames:
    - prometheus.local
  rules:
    - backendRefs:
        - name: prometheus-server
          port: 80
